--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.support_version = '28.0.0'
     ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.8'
+    ext.picasso_version = '2.71828'
     repositories {
         google()
         jcenter()
