--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"  // add kotlin
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"  // anko
     implementation "com.google.code.gson:gson:2.8.5" // add gson for json analyze
     implementation "com.squareup.picasso:picasso:$picasso_version" // for image load
+    implementation "com.android.support:exifinterface:$support_version" // for same sp_version
+    implementation "com.android.support:design:$support_version" // for navigation view
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
