--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+    }
 }
 
 allprojects {
@@ -23,6 +26,9 @@ allprojects {
         google()
         jcenter()
         
+    }
+    repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 }
 
