--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,17 @@ android {
     }
 }
 
+configurations.all {    // resolve support version conflict
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion "$support_version"
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -30,9 +41,7 @@ dependencies {
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"  // anko
     implementation "com.google.code.gson:gson:2.8.5" // add gson for json analyze
     implementation "com.squareup.picasso:picasso:$picasso_version" // for image load
-    implementation "com.android.support:exifinterface:$support_version" // for same sp_version
     implementation "com.android.support:design:$support_version" // for navigation view
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
