--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
     ext.support_version = '28.0.0'
     ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.8'
+    ext.gson_version = '2.8.5'
     ext.picasso_version = '2.71828'
+    ext.okhttp_version = '2.8.5'
     repositories {
         google()
         jcenter()
