--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.5" // add gson for json analyze
     implementation "com.squareup.picasso:picasso:$picasso_version" // for image load
     implementation "com.android.support:design:$support_version" // for navigation view
+    implementation 'org.jsoup:jsoup:1.11.3' // jsoup
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
