--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "com.android.support:design:$support_version" // for navigation view
     implementation 'org.jsoup:jsoup:1.11.3' // jsoup
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version" // for http request
+    implementation "com.android.support:preference-v7:$support_version" // for setting
     // please consider add implementation right above this comment and left the usage comment
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
