--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.11.3' // jsoup
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version" // for http request
     implementation "com.android.support:preference-v7:$support_version" // for setting
+    implementation "com.android.support:support-compat:$support_version" // for notify
     // please consider add implementation right above this comment and left the usage comment
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
