Implement Image Preview
* add transparent status bar
* migrate android support to new androidx to solve Manifest conflict after add StfalconImageViewer
* rm test file
* try to fix Nasa today video
* add preview overlay
* add preview icon
* now preview:
  - set wallpaper (a straight way now
  - share as image file (some app do not support because they not follow google's standard such as TIM
  - save image to the default 'Pictures/wallpaper' in external storage
* save cache image file to app 'files/Pictures' directory

notice: the ngchina website sames down
please: ignore the build conf version Warning

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
           package="cn.com.zzndb.wallpaper">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.SET_WALLPAPER"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <!-- TODO add backup detail later -->
@@ -30,6 +31,7 @@
                 android:theme="@style/NoActionBar">
         </activity>
         <activity android:name=".view.MainActivity"
+                  android:theme="@style/StatusBarTheme"
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -37,6 +39,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <provider
+                android:authorities="cn.com.zzndb.wallpaper.provider"
+                android:name="androidx.core.content.FileProvider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
     </application>
 
 </manifest>
