--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionName "0.5"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -36,18 +36,19 @@ configurations.all {    // resolve support version conflict
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "androidx.appcompat:appcompat:$support_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"  // add kotlin
     implementation "org.jetbrains.anko:anko-sqlite:$anko_version"  // anko
     implementation "com.google.code.gson:gson:$gson_version" // add gson for json analyze
     implementation "com.squareup.picasso:picasso:$picasso_version" // for image load
-    implementation "com.android.support:design:$support_version" // for navigation view
+    implementation "com.google.android.material:material:$support_version" // for navigation view
     implementation 'org.jsoup:jsoup:1.11.3' // jsoup
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version" // for http request
-    implementation "com.android.support:preference-v7:$support_version" // for setting
-    implementation "com.android.support:support-compat:$support_version" // for notify
+    implementation "androidx.preference:preference:$support_version" // for setting
+    implementation "androidx.core:core:$support_version" // for notify
+    implementation 'com.github.lloydblv:stfalconimageviewer:1.0-stable'  // for imageView
     // please consider add implementation right above this comment and left the usage comment
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
 }
