--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.support_version = '28.0.0'
+    ext.support_version = '1.0.0-beta01'
     ext.kotlin_version = '1.3.21'
     ext.anko_version = '0.10.8'
     ext.gson_version = '2.8.5'
@@ -30,7 +30,8 @@ allprojects {
         
     }
     repositories {
-        maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/'}
+        maven { url 'https://jitpack.io' }
     }
 }
 
