Implement Settings (not finished yet
change nav bar view, mv auto update wallpaper switch to setting
setting
 - auto save image
   * change file name use 'date_source_fname'
 ...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
 
         <activity android:name=".view.Setting">
         </activity>
+        <activity android:name=".view.About">
+        </activity>
         <activity
                 android:name=".view.search"
                 android:label="@string/title_activity_search"
